# syntaxmakers

./: Cargo.toml  Dockerfile  README.md
deploy/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  (+2 more)
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  dockerDeploy.sh  nginx.conf
server/migrations/: 20230623210040_initial_tables.sql
server/src/: app_state.rs  lib.rs
server/src/common/: datetime_utils.rs  fs_utils.rs  rand_utils.rs
server/src/common/authentication/: auth_keys_service.rs  auth_service.rs  password_hash.rs
server/src/common/emailer/: emailer.rs  model.rs
server/src/common/repository/: base.rs  error.rs
server/src/common/repository/application/: models.rs  repo.rs
server/src/common/repository/companies/: models.rs  repo.rs
server/src/common/repository/countries/: models.rs  repo.rs
server/src/common/repository/developers/: models.rs  repo.rs
server/src/common/repository/employers/: models.rs  repo.rs
server/src/common/repository/industries/: models.rs  repo.rs
server/src/common/repository/jobs/: models.rs  repo.rs
server/src/common/repository/languages/: models.rs  repo.rs
server/src/common/repository/salaries/: models.rs  repo.rs
server/src/common/repository/user/: models.rs  repo.rs
server/src/common_test/: fixtures.rs
server/src/routes/: auth_helper.rs  base_model.rs  route_utils.rs  user_error.rs
server/src/routes/application/: models.rs  routes.rs
server/src/routes/auth/: models.rs  routes.rs
server/src/routes/authentication/: models.rs  routes.rs
server/src/routes/companies/: model.rs  models.rs  routes.rs
server/src/routes/countries/: model.rs  models.rs  routes.rs
server/src/routes/developers/: models.rs  routes.rs
server/src/routes/employers/: models.rs  routes.rs
server/src/routes/industries/: models.rs  routes.rs
server/src/routes/jobs/: models.rs  routes.rs
server/src/routes/languages/: models.rs  routes.rs
server/src/routes/salaries/: models.rs  routes.rs
server/src/routes/user/: models.rs  routes.rs
server/tests/: mod.rs
server/tests/common/authentication/: test_auth_keys_service.rs  test_auth_service.rs
server/tests/common/repository/application/: test_application.rs
server/tests/common/repository/companies/: test_companies.rs
server/tests/common/repository/countries/: test_countries.rs
server/tests/common/repository/developers/: test_developers.rs
server/tests/common/repository/employers/: test_employers.rs
server/tests/common/repository/industries/: test_industries.rs
server/tests/common/repository/jobs/: test_jobs.rs
server/tests/common/repository/languages/: test_languages.rs
server/tests/common/repository/salaries/: test_salaries.rs
server/tests/common/repository/user/: test_user.rs
server/tools/: cleandb.sh  docker-on-local.sh  pgcommands.txt  run-tests.sh  setup-dev-data.sql  truncatedb.sql
syntaxmakers-client/: Cargo.toml  README.md  index.html
syntaxmakers-client/src/: app.rs  main.rs
syntaxmakers-client/src/common/components/: nav.rs  post_preview.rs  select.rs
syntaxmakers-client/src/common/state/: user_type.rs
syntaxmakers-client/src/routes/: dev.rs
syntaxmakers-client/styles/: base.css  dev.css  post_preview.css  select.css
syntaxmakers-contract/: Cargo.toml  rust-toolchain.toml
syntaxmakers-contract/.cargo/: config.toml
syntaxmakers-contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
(+224 files in other folders)
