[package]
name = "syntaxmakers-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "syntaxmakers-server"

[dependencies]
actix-cors = "0.6.4"
actix-http = "3.3.1"
actix-web = "4.3.1"
actix-jwt-auth-middleware = "0.3.0"
actix-multipart = "0.6.0"
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
exonum-crypto = "1.0.0"
fake = { version = "2.6.1", features=['derive']}
futures = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
jwt-compact = { version = "0.7.0", features = [ "exonum-crypto" ] }
lazy_static = "1.4.0"
log = "0.4.16"
mockall = "0.11.4"
multipart = "0.18.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
serde_repr = "0.1.12"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.3.0", features = ["v4", "serde"] }