[package]
name = "syntaxmakers"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
fake = { version = "2.6.1", features=['derive']}
leptos = "0.3.0"
leptos_router = { version = "0.3.0", features = ["csr"] }
lazy_static = "1.4.0"
uuid = { version = "1.3.3", features = ["serde", "v4", "js"] }