[package]
name = "syntaxmakers-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.2.5", features = ["staking"] }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
cw-storage-plus = "1.0.1"
thiserror = "1"
schemars = "0.8.1"
cw-utils = "1.0.1"

[dev-dependencies]
cw-multi-test = "0.16.4"
cosmwasm-schema = { version = "1.0.0" }